fix: add user by id fix
